# cryptek

./: .gitignore  manage.py  pyproject.toml  requirements.txt
blog_app/: admin.py  context_processors.py  sitemaps.py  urls.py
blog_app/docs/: gemini_api_testing.md
blog_app/factories/: category_factory.py  comment_factory.py  entry_factory.py  like_factory.py  multimedia_factory.py  tag_factory.py
blog_app/forms/: comment_form.py
blog_app/migrations/: 0001_initial.py  0002_auto_20250408_0942.py  0002_initial.py  0003_alter_category_slug_alter_category_thumbnail_and_more.py  0003_codetip.py  0004_auto_20250407_1014.py  0004_codetip_level_codetip_tech_stack_codetip_type_of_tip.py  0005_codetip_error_message_codetip_gemini_raw_response_and_more.py  0005_entry_cdn_image_public_id_entry_cdn_image_url.py  0005_entry_cdn_image_url.py  0006_alter_entry_slug.py  0007_geminiapiusage.py
blog_app/models/: __init__.py  category.py  code_tip.py  comment.py  entry.py  gemini_api_usage.py  like.py  multimedia.py
blog_app/serializers/: entry_serializer.py
blog_app/tests/: __init__.py  factory_tests.py  gemini_api_test.py  model_tests.py
blog_app/views/: code_tip_view.py  comment_view.py  email_verification_view.py  entry_view.py  like_view.py  search_view.py  terms_and_privacy_view.py
conscious_element/: adapters.py  apps.py  backends.py  session_middleware.py  urls.py  views.py
conscious_element/admin/: __init__.py  blocked_email_domain_admin.py  cryptek_user_admin.py  follow_admin.py  profile_admin.py  session_admin.py  user_role_admin.py
conscious_element/factory/: blocked_email_domain_factory.py  cryptek_user_factory.py  follow_factory.py  profile_factory.py  session_factory.py  user_role_factory.py
conscious_element/forms/: contact_me_form.py  create_account_form.py  profile_form.py
conscious_element/migrations/: 0001_initial.py  0002_profile_session_userrole_follow.py  0002_profile_userrole_follow.py  0003_cryptekuser_email_verified.py  0003_session.py
conscious_element/models/: cryptek_user.py  follow.py  profile.py  session.py  user_role.py
conscious_element/templatetags/: __init__.py  markdown_extras.py  session_filters.py
conscious_element/tests/: factory_tests.py
conscious_element/views/: about_me.py  contact_me_view.py  create_account_view.py  email_validation.py  login_view.py  logout_view.py  profile_view.py  session_view.py  singup_view.py
cryptek/: README_TESTING.md  asgi.py  backends.py  context_processors.py  csp_report_view.py  qa_template.md  qa_templates.py  settings.py  urls.py  views.py  wsgi.py
cryptek/ai_system/: comment_moderation.py  gemini_tip.py
cryptek/templates/: about_me.html  base.html  category.html  code_tip_box.html  comment.html  contact.html  contact_box.html  contact_success.html  create_account.html  entry_detail.html  footer.html  gemini_tip_box.html  home.html  index.html  login.html  main_post_card.html  personal_profile.html  post_card.html  post_detail.html  privacy_policy.html  profile.html  qr_code_box.html  search_bar.html  sidebar.html  terms_of_service.html  update_profile.html
cryptek/test_and_check/: .coveragerc  base_factory_test.py  base_model_test.py  execute_coverage.sh
library_tomb/: admin.py  apps.py  sitemaps.py  urls.py
library_tomb/admin/: __init__.py  category_admin.py  comment_admin.py  like_admin.py  multimedia_admin.py  post_admin.py  tag_admin.py
library_tomb/factories/: comment_factory.py  entry_factory.py  like_factory.py  multimedia_factory.py  post_factory.py
log_recorder_app/: apps.py  models.py  tests.py
tesseract_vault/: Dockerfile  Dockerfile.db  Dockerfile.redis  docker-compose.yml
user_app/: adapters.py  backends.py  session_middleware.py  urls.py
(+107 files in other folders)
