[tool.poetry]
name = "cryptek"
version = "0.1.0"
description = ""
authors = ["IJMadalenA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
poetry = "^1.8.4"
whitenoise = "^6.7.0"
virtualenv = "^20.27.0"
django-filter = "^24.3"
Markdown = "^3.7"
django-environ = "^0.11.2"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-comprehensions = "^3.15.0"
flake8-isort = "^6.1.1"
pre-commit = "^4.0.1"
coverage = "^7.6.4"
interrogate = "^1.7.0"
pylint = "^3.3.1"
pylint-django = "^2.6.1"
pylint-django-settings = "^1.0.0"
pylint-forbidden-imports = "^1.0.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
