[tool.black]
line-length = 119
color = true
target-version = ['py38']

[tool.poetry]
name = "cryptek"
version = "0.1.0"
description = ""
authors = ["IJMadalenA"]
readme = "README.md"

[tool.isort]
profile = "black"
line_length = 119
src_paths = ["src"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
django-environ = "^0.11.2"
django-markdownx = "^4.0.7"
djangorestframework = "^3.15.2"
django-csp = "^3.8"
gunicorn = "^23.0.0"
poetry = "^1.8.4"
whitenoise = "^6.7.0"
virtualenv = "^20.27.0"
django-filter = "^25.1"
Markdown = "^3.7"
pillow = "^11.0.0"
tblib = "^3.0.0"
django-redis = "^5.4.0"
django-allauth = { extras = ["socialaccount"], version = "^65.4.1" }
cython = "^3.0.12"
django-debug-toolbar = "^5.0.1"
django-widget-tweaks = "^1.5.0"
bleach = "^6.2.0"
dnspython = "^2.7.0"
cloudinary = "^1.43.0"
dj-database-url = "^2.3.0"
psycopg = "^3.2.6"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-comprehensions = "^3.15.0"
flake8-isort = "^6.1.1"
pre-commit = "^4.0.1"
interrogate = "^1.7.0"
pylint = "^3.3.1"
pylint-django = "^2.6.1"
pylint-django-settings = "^1.0.0"
pylint-forbidden-imports = "^1.0.0"
factory-boy = "^3.3.1"
psycopg2-binary = "^2.9.10"
django-debug-toolbar = "^5.0.1"
coverage = "^7.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]
